# makeimg

./: config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
resizeimage/: helpers.py
