[tool.poetry]
name = "makeimg"
version = "0.1.0"
description = "Fastapi project"
authors = ["ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
httpx = "^0.26.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
